[package]
name = "cybervault"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
iota-sdk = { git = "https://github.com/iotaledger/iota-sdk", branch = "develop" }
wasm-bindgen = "0.2"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cybervault-cli"
path = "src/main.rs"
